--- a/_posts/study/2022-01-03-reading.md
+++ b/_posts/study/2022-01-03-reading.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "J'ai lu et continue de lire"
+title:  "Je lis encore et toujours"
 author: erica
 categories: [ ]
 image: assets/images/book.jpg
