--- a/_posts/study/2022-01-02-mooc.md
+++ b/_posts/study/2022-01-02-mooc.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "J'ai étudié en ligne"
+title:  "J'étudie en ligne"
 author: erica
 categories: [ ]
 image: assets/images/babel.jpg
