--- a/_posts/study/2022-01-01-enseeiht.md
+++ b/_posts/study/2022-01-01-enseeiht.md
@@ -7,4 +7,4 @@ image: assets/images/enseeiht.jpg
 study: true
 ---
 
-J'ai étudié à l'<a href="https://fr.wikipedia.org/wiki/ENSEEIHT" target="_blank">ENSEEIHT</a> et ai été diplomée en 2014
+J'ai été diplomée de l'<a href="https://fr.wikipedia.org/wiki/ENSEEIHT" target="_blank">ENSEEIHT</a> en 2014.
