--- a/_posts/study/2022-01-04-meetup.md
+++ b/_posts/study/2022-01-04-meetup.md
@@ -6,4 +6,4 @@ categories: [ ]
 image: assets/images/software.jpg
 study: true
 ---
-En 2019-2020, j'ai rejoins et suis devenue l'une des quatres animateurices d'un <a href="https://www.meetup.com/paris-software-craftsmanship/" target="_blank">groupe meetup</a> qui se réunit une fois par mois pour échanger sur les outils, méthodes et bonnes pratiques afin de continuer à progresser en tant que professionnels.
+En 2019-2020, j'ai rejoint le groupe <a href="https://www.meetup.com/paris-software-craftsmanship/" target="_blank">Paris - Software Craftmanship</a> et en suis devenue l'un des quatres animateurs. Nous nous réunissions une fois par mois pour échanger sur les outils, méthodes et bonnes pratiques afin de continuer à progresser en tant que professionnels.
