--- a/_posts/experience/2023-01-01-otonome.md
+++ b/_posts/experience/2023-01-01-otonome.md
@@ -8,4 +8,4 @@ year: "2015"
 experience: true
 ---
 
-Chez <a href="https://www.telegrafik.eu/" target="_blank">Telegrafik</a>, j'ai crée la première version de leur logiciel en utilisant des capteurs de mouvements pour détecter les incidents et prévenir la famille si nécessaire
+Chez <a href="https://www.telegrafik.eu/" target="_blank">Telegrafik</a>, j'ai créé la première version de leur logiciel en utilisant des capteurs de mouvements pour détecter les incidents et prévenir la famille si nécessaire.
