--- a/_posts/study/2022-01-02-mooc.md
+++ b/_posts/study/2022-01-02-mooc.md
@@ -7,4 +7,4 @@ image: assets/images/babel.jpg
 study: true
 ---
 
-Grâce aux MOOCS, j'ai pu continuer à étudier<a href="https://www.coursera.org/specializations/interaction-design" target="_blank">l'UX Design</a>, <a href="https://www.coursera.org/learn/philosophy?" target="_blank">la philosophie</a> et <a href="https://www.coursera.org/learn/human-language?" target="_blank">la linguistique</a>
+Grâce aux MOOCS, j'ai pu continuer à étudier <a href="https://www.coursera.org/specializations/interaction-design" target="_blank">l'UX Design</a>, <a href="https://www.coursera.org/learn/philosophy?" target="_blank">la philosophie</a> et <a href="https://www.coursera.org/learn/human-language?" target="_blank">la linguistique</a>.
