--- a/_posts/experience/2023-01-06-multi.md
+++ b/_posts/experience/2023-01-06-multi.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Où j'ai accompagné des particuliers pour apaiser leur relation à l'argent"
+title:  "Où je coopére pour promouvoir l'open source"
 author: erica
 categories: [ UX, Architecture, python, VueJs,  Communication,  Travail d'équipe, Recrutement et formations, Gestion de projet, Communication]
 image: assets/images/multi.png
@@ -8,4 +8,4 @@ year: "2023-aujourd'hui"
 experience: true
 ---
 
-Je fais aujourd'hui partie de la cooperative <a href="https://agatha-budget.fr/" target="_blank">multi</a>. Ensemble nous contribuons au développement des communs numériques. De la conception du produit à la mise en production nous apportons l'expertise, l'agilité et l'engagement d'une équipe multidisciplinaire, pour construire avec vous des projets numériques d'intérêt général.
+Je fais aujourd'hui partie de la coopérative <a href="https://agatha-budget.fr/" target="_blank">multi</a>. Ensemble nous contribuons au développement des communs numériques. De la conception du produit à la mise en production nous apportons l'expertise, l'agilité et l'engagement d'une équipe multidisciplinaire, pour construire avec vous des projets numériques d'intérêt général.
