--- a/_posts/experience/2023-01-01-otonome.md
+++ b/_posts/experience/2023-01-01-otonome.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Où j'ai aidé des personnes agées à continuer de vivre sereinement chez elles"
 author: erica
 categories: [ UX, Java, Architecture]
-image: assets/images/elderly.jpg
+image: assets/images/elderly.webp
 year: "2015"
 experience: true
 ---
