--- a/_posts/experience/2023-01-06-multi.md
+++ b/_posts/experience/2023-01-06-multi.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Où je coopére pour promouvoir l'open source"
 author: erica
 categories: [ UX, Architecture, python, VueJs,  Communication,  Travail d'équipe, Recrutement et formations, Gestion de projet, Communication]
-image: assets/images/multi.png
+image: assets/images/multi.webp
 year: "2023-aujourd'hui"
 experience: true
 ---
