--- a/_posts/study/2022-01-01-enseeiht.md
+++ b/_posts/study/2022-01-01-enseeiht.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Je suis Ingénieure en Informatique et Mathématiques appliquées"
 author: erica
 categories: []
-image: assets/images/enseeiht.jpg
+image: assets/images/enseeiht.webp
 study: true
 ---
 
