--- a/_posts/study/2022-01-02-mooc.md
+++ b/_posts/study/2022-01-02-mooc.md
@@ -3,7 +3,7 @@ layout: post
 title:  "J'étudie en ligne"
 author: erica
 categories: [ ]
-image: assets/images/babel.jpg
+image: assets/images/babel.webp
 study: true
 ---
 
