--- a/_posts/study/2022-01-03-reading.md
+++ b/_posts/study/2022-01-03-reading.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Je lis encore et toujours"
 author: erica
 categories: [ ]
-image: assets/images/book.jpg
+image: assets/images/book.webp
 study: true
 ---
 
