--- a/_posts/experience/2023-01-02-decalog.md
+++ b/_posts/experience/2023-01-02-decalog.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Où j'ai créé un logiciel pour améliorer l'accès aux articles de recherche"
 author: erica
 categories: [ UX, PHP, React, Architecture, Design UI, Support et formation utilisateur, Travail d'équipe, Recrutement et formations, Gestion de projet ]
-image: assets/images/library.jpg
+image: assets/images/library.webp
 year: "2016-2018"
 experience: true
 ---
